# chaptersaw

./: .gitignore  CHANGELOG.md  LICENSE  README.md  mkv_splitter.ipynb  pyproject.toml
src/chaptersaw/: __init__.py  cli.py  exceptions.py  extractor.py  models.py  parser.py
tests/: __init__.py  test_cli.py  test_exceptions.py  test_extractor.py  test_integration.py  test_models.py  test_parser.py
