[project]
name = "chaptersaw"
version = "0.1.0"
description = "Extract and merge specific chapters from video files (MKV, MP4, AVI, WebM) based on chapter title keywords or regex patterns"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Berker Bozdağ", email = "berker.bozdag@outlook.com" }
]
requires-python = ">=3.11"
keywords = ["mkv", "mp4", "avi", "webm", "video", "chapters", "ffmpeg", "extraction", "merge", "anime", "episodes"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "rich>=13.0",
    "guessit>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.4",
]

[project.scripts]
chaptersaw = "chaptersaw.cli:main"

[project.urls]
Homepage = "https://github.com/berkerbozdag/chaptersaw"
Repository = "https://github.com/berkerbozdag/chaptersaw"
Issues = "https://github.com/berkerbozdag/chaptersaw/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chaptersaw"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "D",      # pydocstyle
    "SIM",    # flake8-simplify
]
ignore = [
    "D100",   # Missing docstring in public module
    "D104",   # Missing docstring in public package
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=chaptersaw --cov-report=term-missing"
